--- a/hotel/scss/styles.css
+++ b/hotel/scss/styles.css
@@ -402,7 +402,7 @@ nav ul li a {
   padding: 0.5rem;
 }
 nav ul li.active {
-  background-color: #3687c9;
+  background-color: #205179;
 }
 nav ul li a:hover {
   background-color: #3687c9;
